--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    tags: ghcr.io/thevinayysharma/Token_gitactions:latest
 
+
+#conditons
+          
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -24,21 +28,23 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       -
         name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./
           file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/Token_gitactions:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/Token_gitactions:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/Token_gitactions:buildcache,mode=max
