--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -20,7 +20,7 @@ COPY . ./
 # Build
 RUN yarn run build
 
-# production environment
+# Production environment
 FROM nginx:stable-alpine
 COPY --from=build /app/build /usr/share/nginx/html
 
