--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,10 @@
-server {
+# nginx config
+
+server {    # simple reverse-proxy
 
   listen 80;
 
+# serve static files
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
@@ -15,3 +18,6 @@ server {
   }
 
 }
+
+
+# more richons here https://www.nginx.com/resources/wiki/start/topics/examples/full/
